--- a/_posts/2017-12-17-pupdates.md
+++ b/_posts/2017-12-17-pupdates.md
@@ -3,6 +3,7 @@ priority: 0.8
 title: Pupdates
 excerpt: A dog-centric social networking app
 categories: works
+options: nolanding
 background-image: works-sample.png
 tags:
   - React
